@@ -416,16 +416,6 @@ bloc_diffusion objet_lecture nul 0 not_set
   attr operateur diffusion_deriv operateur 1 if none is specified, the diffusive scheme used is a 2nd-order scheme.
   attr op_implicite op_implicite op_implicite 1 To have diffusive implicitation, it use Uzawa algorithm. Very useful when viscosity has large variations.
   attr acof chaine(into=["}"]) acof 0 Closing curly bracket.
-eqn_base mor_eqn eqn_base -3 Basic class for equations.
-  attr convection bloc_convection convection 1 Keyword to alter the convection scheme.
-  attr diffusion bloc_diffusion diffusion 1 Keyword to specify the diffusion operator.
-  attr conditions_initiales|initial_conditions condinits conditions_initiales 1 Initial conditions.
-  attr conditions_limites|boundary_conditions condlims conditions_limites 1 Boundary conditions.
-  attr sources sources sources 1 To introduce a source term into an equation (in case of several source terms into the same equation, the blocks corresponding to the various terms need to be separated by a comma)
-  attr ecrire_fichier_xyz_valeur ecrire_fichier_xyz_valeur_param ecrire_fichier_xyz_valeur 1 This keyword is used to write the values of a field only for some boundaries in a text file with the following format: n_valeur NL2 x_1 y_1 [z_1] val_1 NL2 ... NL2 x_n y_n [z_n] val_n NL2 The created files are named : pbname_fieldname_[boundaryname]_time.dat
-  attr ecrire_fichier_xyz_valeur_bin ecrire_fichier_xyz_valeur_param ecrire_fichier_xyz_valeur_bin 1 This keyword is used to write the values of a field only for some boundaries in a binary file with the following format: n_valeur NL2 x_1 y_1 [z_1] val_1 NL2 ... NL2 x_n y_n [z_n] val_n NL2 The created files are named : pbname_fieldname_[boundaryname]_time.dat
-  attr parametre_equation parametre_equation_base parametre_equation 1 Keyword used to specify additional parameters for the equation
-  attr equation_non_resolue chaine equation_non_resolue 1 The equation will not be solved while condition(t) is verified if equation_non_resolue keyword is used. Exemple: The Navier-Stokes equations are not solved between time t0 and t1. NL2 Navier_Sokes_Standard NL2 { equation_non_resolue (t>t0)*(t<t1) }
 traitement_particulier_base objet_lecture traitement_particulier_base 1 Basic class to post-process particular values.
 traitement_particulier objet_lecture nul 0 Auxiliary class to post-process particular values.
   attr aco chaine(into=["{"]) aco 0 Opening curly bracket.
